--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
             <td><strong>LinkedIn Profile:</strong></td>
-            <td><a href="https://www.linkedin.com/in/alex-zamurca-3259241a7/">Click to visit profile</a> </td>
+            <td><a href="https://www.linkedin.com/in/alex-z%C4%83murc%C4%83-3259241a7/">Click to visit profile</a> </td>
         </tr>
     </table>
     <hr>
