--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </td>
         <td>
           <ul>
-            <li><strong>OSs</strong><br>Romanian (native), English (fluent)</li>
+            <li><strong>OSs</strong><br>Windows, Linux(Ubuntu)</li>
             <li><strong>Familiar Software IDEs and Tools</strong><br>IntelliJ** , CLion,  GitHub*, Git*, Android Studio**, Visual Studio Code</li>
             <li><strong>Languages</strong><br>Romanian (native), English (fluent)</li>
           </ul>
